--- a/dashboards/templates/dashboards/teacher/_cloud_tags.html
+++ b/dashboards/templates/dashboards/teacher/_cloud_tags.html
@@ -17,8 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 <script src="{% static 'analytics/js/teacher/cloud.min.js' %}"></script>
 
                                         
-
-<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container ">
+<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
   <div class="row cloudy-header">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar">
       <div class="cloudy-title">
@@ -29,13 +28,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
           data-toggle="tooltip"
           title="{% trans 'Compare access number in each class tag in this subject' %}"
         ></i>
+        <div class="select-cloud">
+          <span>{% trans 'Cloudy' %}</span>
+          <label class="switch" >
+            <input id="cloudBtn" type="checkbox" name="percentOn" checked onclick="view_toogle($(this))" />
+            <span class="slider round"></span>
+          </label>
       </div>
-      <div class="hidden-xs hidden-sm">
-        {% trans 'Cloudy' %}
-        <label class="switch">
-          <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="view_toogle()" />
-          <span class="slider round"></span>
-        </label>
       </div>
     </div>
   </div>
@@ -49,13 +48,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <div
       style="height: 60px; display: flex; width: 30%; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px"
     >
-      <h3>{% trans 'Accessess' %}</h3>
+      <h3 style="margin-top: 5px; margin-bottom: 2px;">{% trans 'Accessess' %}</h3>
     </div>
   </div>
-
-  <div id="cloudy" class="hidden-xs hidden-sm cloudy" style="padding: 0px" data-url="{{ tags_cloud }}">
-    {% include 'dashboards/loading_ball.html' with tittle="cloudy_loading_ball" %}
   
+  <div id="cloudy" class="hidden-xs hidden-sm cloudy" style="padding: 0px" data-url="{% url 'dashboards:cloudy_data_period' subject.slug %}">
+    {% include 'dashboards/loading_ball.html' with tittle="cloudy_loading_ball" %}
+  </div>
   <div class="visible-xs visible-sm table-responsive">
     <table id="tag-access" class="table">
       <thead>
