--- a/dashboards/templates/dashboards/teacher/index.html
+++ b/dashboards/templates/dashboards/teacher/index.html
@@ -84,14 +84,14 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <hr />
             <div class="container">
                 <div class="row">
-                    {% include "dashboards/teacher/_cloud_tags.html" %}
-                    </br>
+                    <div class="col-md-12">
+                        {% include "dashboards/teacher/_cloud_tags.html" %}
+                        </br>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4" style="margin-top: 7px;">
+                    <div class="col-md-4">
                         <!-- Tabela de recursos -->
-                        </br>
                         {% include "dashboards/teacher/_resources_table.html" %}
                     </div>
                     <div class="col-md-4">
@@ -125,9 +125,18 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         $("#filter").click(() => {
             const dataIni = $("#from").val()
             const dataEnd = $("#until").val()
-
-            {% comment %} const dataRecourseUrl = $(".cloudy").data("url"); // ATUALIZA OS DADOS DA NUVEM DE ACORDO COM O RANGE DE DATA SELECIONADO {% endcomment %}
-            
+            {% comment %} if(dataIni > dataEnd)
+                alert(" Periodo inválido");
+            else{ {% endcomment %}
+            const dataCloudUrl = $("#cloudy").data("url"); // ATUALIZA OS DADOS DA NUVEM DE ACORDO COM O RANGE DE DATA SELECIONADO 
+            $(".cloudy").html("");
+            $("#tableHeader").css("display", "none");
+            $(".table table-hover").html("");
+            if (!$("#cloudBtn").is(':checked')){
+                $("#cloudBtn").attr('value', 'true');
+                $("#cloudBtn").click();
+            }
+            cloud(dataCloudUrl, dataIni, dataEnd);
             
             const dataRecourseUrl = $(".table_resources").data("url"); // ATUALIZA OS DADOS DA TABELA DE RECURSOS DE ACORDO COM O RANGE DE DATA SELECIONADO
             loadDataResources(dataRecourseUrl, dataIni, dataEnd);
@@ -139,7 +148,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             $(".bubble_users .users_cloud").html("");
 
             loadData(dataUrl, dataIni, dataEnd);
-            
+            {% comment %} } {% endcomment %}
 
         })
     </script>
