--- a/dashboards/templates/dashboards/teacher/index.html
+++ b/dashboards/templates/dashboards/teacher/index.html
@@ -77,7 +77,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 </div>
             </div>
             <hr />
-            <div class="container">
+            <div class="container" style="max-width: 100%">
                 <div class="row">
                     <div class="col-md-12">
                         <!-- Tag cloud -->
@@ -93,6 +93,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     </div>
                     <div class="col-md-4">
                         <!-- Heatmap -->
+                        {% include "dashboards/teacher/_heatmap.html" %}
                     </div>
                 </div>
             </div>
@@ -108,11 +109,14 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             const dataIni = $("#from").val()
             const dataEnd = $("#until").val()
 
-            const dataUrl = $(".bubble_users").data("url");
+            const bubbleUrl = $(".bubble_users").data("url");
+            const heatmapUrl = $(".heatmap").data("url");
 
             $(".bubble_users .users_cloud").html("");
+            $(".heatmap .heatmap_chart").html("");
 
-            loadData(dataUrl, dataIni, dataEnd);
+            bubbleData(bubbleUrl, dataIni, dataEnd);
+            heatmapData(heatmapUrl, dataIni, dataEnd);
         })
     </script>
 {% endblock %}
