--- a/dashboards/templates/dashboards/teacher/_cloud_tags.html
+++ b/dashboards/templates/dashboards/teacher/_cloud_tags.html
@@ -21,13 +21,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   <div class="row cloudy-header">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar">
       <div class="cloudy-title">
-        <b>{% trans 'Most Popular Tags' %}</b>
-        <i
-          class="fa fa-info-circle"
-          aria-hidden="true"
-          data-toggle="tooltip"
+        <b>{% trans 'Most Popular Tags' %} <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip"
           title="{% trans 'Compare access number in each class tag in this subject' %}"
-        ></i>
+        ></i></b>
+        
         <div class="select-cloud">
           <span>{% trans 'Cloudy' %}</span>
           <label class="switch" >
@@ -110,9 +107,6 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     </div>
   </div>
 </div>
-
-  
-
 
 <script type="text/javascript">
   function cloudy_responsibilities() {}
