--- a/dashboards/templates/dashboards/teacher/_cloud_tags.html
+++ b/dashboards/templates/dashboards/teacher/_cloud_tags.html
@@ -26,13 +26,20 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         ></i></b>
         
         <div class="select-cloud">
-          <span>{% trans 'Cloudy' %}</span>
+          <span>{% trans 'Cloud' %}</span>
           <label class="switch" >
             <input id="cloudBtn" type="checkbox" name="percentOn" checked onclick="view_toogle($(this))" />
             <span class="slider round"></span>
           </label>
       </div>
       </div>
+    </div>
+  </div>
+  <div class="row cloudy-header-2">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
+      <i id="cloudy-icon" class="fa fa-text-height icon-cloudy-legend" aria-hidden="true"></i>
+      <p class="text-cloudy-legend">{% trans 'Class accesses' %}</p>
+      
     </div>
   </div>
   <div
