--- a/dashboards/templates/dashboards/teacher/_cloud_tags.html
+++ b/dashboards/templates/dashboards/teacher/_cloud_tags.html
@@ -17,7 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 <script src="{% static 'analytics/js/teacher/cloud.min.js' %}"></script>
 
                                         
-<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
+<div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 nopadding">
   <div class="row cloudy-header">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar">
       <div class="cloudy-title">
@@ -37,7 +37,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   <div class="row cloudy-header-2">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
       <i id="cloudy-icon" class="fa fa-text-height icon-cloudy-legend" aria-hidden="true"></i>
-      <p class="text-cloudy-legend">{% trans 'Class accesses' %}</p>
+      <p class="text-cloudy-legend">{% trans 'Tagged resource accesses' %}</p>
       
     </div>
   </div>
