--- a/dashboards/templates/dashboards/teacher/index.html
+++ b/dashboards/templates/dashboards/teacher/index.html
@@ -58,7 +58,9 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 <div class="col-md-12">
                     <form id="period" class="form-inline" action="" method="POST">
                         {% csrf_token %}
-
+                        <div class="period-title">
+                            <span> {% trans 'Select the required period' %}</span>
+                        </div>
                         <div class="form-group">
                             <label for="from">{% trans 'From' %}:</label>
                             <div class="input-group">
@@ -79,15 +81,15 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                         </div>
                         <button id="filter" type="button" class="btn btn-success btn-raised btn-sm">Filtrar</button>
                         <div class="alert alert-danger data-error" style="display: none;" role="alert">
-                            Data/Período inválido. Por favor, selecione um período válido.
+                            Data/Período inválido. Por favor, selecione uma data inicial igual ou anterior à data do final.
                         </div>
                     </form>
                 </div>
             </div>
             <hr />
             <div class="container" style="max-width: 100%">
-                <div class="row">
-                    <div class="col-md-12">
+                <div class="row nopadding">
+                    <div class="col-md-12 nopadding">
                         {% include "dashboards/teacher/_cloud_tags.html" %}
                         <br />
                     </div>
