--- a/dashboards/static/dashboards/css/teacher_dash.css
+++ b/dashboards/static/dashboards/css/teacher_dash.css
@@ -1,8 +1,30 @@
+.analytics-ungeneral {
+  position: relative;
+}
+#panel_loading_mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: .9;
+  background: #f5f5f5;
+  display: none;
+  z-index: 9;
+  margin-top: -15px;
+  margin-left: -15px;
+}
+#panel_loading_mask .loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .period-title span{
   color: #BDBDBD;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  margin: 0px 0px 5px
+  margin: 0px 0px 5px;
 }
 .bubble_users .header {
   display: flex;
@@ -20,7 +42,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  padding: 5px 0px;
+  padding: 7px 0px;
 }
 
 .bubble_users .info p {
@@ -161,7 +183,7 @@
 
 .heatmap .header {
   border-bottom: 2px solid #666;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 }
 
 
@@ -174,7 +196,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
-  padding-bottom: 5px;
+  padding-bottom: 7px;
   
 }
 
