Adjusting graph title and subtitle

--- a/dashboards/templates/dashboards/teacher/_users_bubble.html
+++ b/dashboards/templates/dashboards/teacher/_users_bubble.html
@@ -16,7 +16,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <div class="header">
             <div class="identifier">
                 <b>
-                    {% trans 'Students accessess' %}
+                    {% trans 'Students that interacts the most' %}
                     <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the access number realized by the students subscribed in the subject' %}"></i>
                 </b>
             </div>
@@ -33,7 +33,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 <i class="fa fa-smile-o"></i>
                 <i class="fa fa-arrows-v"></i>
             </div>
-            <p class="text-cloudy-legend">{% trans 'Student accesses' %}</p>
+            <p class="text-cloudy-legend">{% trans 'Student interactions' %}</p>
         </div>
         <div class="users_cloud">
         </div>
