--- a/dashboards/templates/dashboards/teacher/_cloud_tags.html
+++ b/dashboards/templates/dashboards/teacher/_cloud_tags.html
@@ -89,7 +89,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         </button>
       </div>
       <div class="modal-body" style="padding-top:5px" class="col-md-12 col-xs-12 col-sm-12 col-lg-12">
-        <div id="modal_cloudy_loading_ball" style="height:150px;">
+        <div id="cloudy_loading_wrapper" style="height:150px;">
           {% include 'dashboards/loading_ball.html' with tittle="modal_cloudy_loading_ball" %}
         </div>
       <div id="modal-table" style="display: none;">
