--- a/dashboards/templates/dashboards/teacher/_heatmap.html
+++ b/dashboards/templates/dashboards/teacher/_heatmap.html
@@ -17,7 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <div class="identifier">
                 <b>
                     {% trans 'Days with more students' %}
-                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the access number by month and week day' %}"></i>
+                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the number of distinct students in each day' %}"></i>
                 </b>
             </div>
         </div>
