--- a/dashboards/templates/dashboards/teacher/_users_bubble.html
+++ b/dashboards/templates/dashboards/teacher/_users_bubble.html
@@ -17,7 +17,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             <div class="identifier">
                 <b>
                     {% trans 'Students that interacts the most' %}
-                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the access number realized by the students subscribed in the subject' %}"></i>
+                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the interactions number realized by the students subscribed in the subject' %}"></i>
                 </b>
             </div>
             <div class="selector">
@@ -48,7 +48,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                                 <i class="fa fa-sort"></i>
                             </th>
                             <th class="sort" scope="col" data-sort="access">
-                                {% trans 'Accessess' %}
+                                {% trans 'Interactions' %}
                                 <i class="fa fa-sort"></i>
                             </th>
                         </tr>
