--- a/dashboards/static/dashboards/css/teacher_dash.css
+++ b/dashboards/static/dashboards/css/teacher_dash.css
@@ -5,7 +5,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: .9;
+  opacity: 0.9;
   background: #f5f5f5;
   display: none;
   z-index: 9;
@@ -20,8 +20,8 @@
   justify-content: center;
 }
 
-.period-title span{
-  color: #BDBDBD;
+.period-title span {
+  color: #bdbdbd;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-size: 16px;
   margin: 0px 0px 5px;
@@ -62,7 +62,9 @@
 .bubble_users .users_table th:not(:first-of-type) {
   cursor: pointer;
 }
-
+.bubble_users .users_table th:nth-child(2) {
+  width: 60%;
+}
 .bubble_users .users_table th:last-of-type {
   min-width: 85px;
 }
@@ -106,7 +108,7 @@
 }
 .cloudy-title-bar {
   padding: 0px 0px;
-  height: 100% ;
+  height: 100%;
 }
 .cloudy-title {
   display: flex;
@@ -128,17 +130,16 @@
   height: 16px;
   margin-top: 5px;
   margin-bottom: 4px;
-  margin-left:-15px;
+  margin-left: -15px;
 }
 .text-cloudy-legend {
   height: 20px;
   margin: 2px 0px;
-  padding-right:  5px;
+  padding-right: 5px;
 }
 .cloudy-header-2 {
   padding: 0px 15px;
 }
-
 
 .table_resources .resources_access_table th:not(:first-of-type) {
   cursor: pointer;
@@ -186,8 +187,7 @@
   margin-bottom: 7px;
 }
 
-
-.heatmap .header .identifier{
+.heatmap .header .identifier {
   padding: 3.5px 0px;
 }
 .heatmap .info {
@@ -197,7 +197,6 @@
   justify-content: left;
   align-items: center;
   padding-bottom: 7px;
-  
 }
 
 .heatmap .info .info_icon {
