--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -16,12 +16,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 <script src="{% static 'analytics/js/d3.v3.min.js' %}"></script>
 <script src="{% static 'analytics/js/cloud.min.js' %}"></script>
 
-<div class="col-md-8 col-xs-12 col-sm-12 col-lg-8">
+<div id="tagCloudy" class="col-md-8 col-xs-12 col-sm-12 col-lg-8">
   <div class="row cloudy-header">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar">
       <div class="cloudy-title">
         <b>{% trans 'Most Popular Tags' %}</b>
         <i
+          id="cloudyInfo"
           class="fa fa-info-circle"
           aria-hidden="true"
           data-toggle="tooltip"
