--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -12,7 +12,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
 {% load static i18n %}
 
-<div class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
+<div id="otherIndicators" class="col-md-4 col-xs-12 col-sm-12 col-lg-4">
   <div class="row cloudy-header">
     <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar indicators-bar">
       <div class="cloudy-title">
