--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -162,21 +162,18 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <script type="text/javascript">
         sessionSecurity.confirmFormDiscard = undefined;
 
-
         let audios = {{ avatar_audios|safe }};
         let cloud_audios = {{ avatar_cloud|safe }};
 
         if (audios.length > 0) {
+            let avatar = new Avatar($("#avatar"), audios, cloud_audios);
+
             $("#avatar").click(function () {
-                $(".avatarBox").show();
-                setAudios(audios);
-                $("#avatar").parent().hide();
+                avatar.Init();
 
                 $("#cloudyInfo").removeAttr('data-toggle').removeAttr('data-original-title').css("cursor", "pointer");
                 $("#cloudyInfo").on("click", function () {
-                    if (audios.length > 0) {
-                        playAvatarCloud(cloud_audios);
-                    }
+                    avatar.playCloud();
                 });
             });
         }
