--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -18,6 +18,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       <div class="cloudy-title">
         <b>{% trans 'Important indicators' %}</b>
         <i
+          id="indicatorsInfo"
           class="fa fa-info-circle"
           aria-hidden="true"
           data-toggle="tooltip"
