--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -56,11 +56,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 <div class="face">
                     <div class="topface">
                         <div class="eye">
+                            <div class="eyelid"></div>
                             <div class="iris">
                                 <div class="pupile"></div>
                             </div>
                         </div>
                         <div class="eye">
+                            <div class="eyelid"></div>
                             <div class="iris">
                                 <div class="pupile"></div>
                             </div>
