--- a/dashboards/static/dashboards/css/avatar.css
+++ b/dashboards/static/dashboards/css/avatar.css
@@ -102,6 +102,9 @@
   border-bottom-left-radius: 60%;
   border-bottom-right-radius: 60%;
 }
+.mouthSpeak {
+  animation: speak 1s infinite;
+}
 .axis {
   width: 1rem;
   height: 1rem;
@@ -121,7 +124,7 @@
 
 .ballon {
   position: absolute;
-  bottom: 40%;
+  bottom: 45%;
   left: 75%;
   z-index: 9;
   min-width: 250px;
@@ -178,6 +181,16 @@
   }
 }
 
+@keyframes speak {
+  0%,
+  100% {
+    height: 100%;
+  }
+  50% {
+    height: 1%;
+  }
+}
+
 @-webkit-keyframes blink {
   0%,
   100% {
@@ -186,5 +199,15 @@
 
   50% {
     height: 100%;
+  }
+}
+
+@-webkit-keyframes speak {
+  0%,
+  100% {
+    height: 100%;
+  }
+  50% {
+    height: 1%;
   }
 }
